
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int * samplers; } ;
struct wined3d_gl_info {TYPE_1__ limits; } ;
struct fragment_caps {int wined3d_caps; int PrimitiveMiscCaps; int TextureOpCaps; int MaxSimultaneousTextures; int MaxTextureBlendStages; } ;


 int MAX_TEXTURES ;
 int WINED3DPMISCCAPS_PERSTAGECONSTANT ;
 int WINED3DPMISCCAPS_TSSARGTEMP ;
 int WINED3DTEXOPCAPS_ADD ;
 int WINED3DTEXOPCAPS_ADDSIGNED ;
 int WINED3DTEXOPCAPS_ADDSIGNED2X ;
 int WINED3DTEXOPCAPS_ADDSMOOTH ;
 int WINED3DTEXOPCAPS_BLENDCURRENTALPHA ;
 int WINED3DTEXOPCAPS_BLENDDIFFUSEALPHA ;
 int WINED3DTEXOPCAPS_BLENDFACTORALPHA ;
 int WINED3DTEXOPCAPS_BLENDTEXTUREALPHA ;
 int WINED3DTEXOPCAPS_BLENDTEXTUREALPHAPM ;
 int WINED3DTEXOPCAPS_BUMPENVMAP ;
 int WINED3DTEXOPCAPS_BUMPENVMAPLUMINANCE ;
 int WINED3DTEXOPCAPS_DISABLE ;
 int WINED3DTEXOPCAPS_DOTPRODUCT3 ;
 int WINED3DTEXOPCAPS_LERP ;
 int WINED3DTEXOPCAPS_MODULATE ;
 int WINED3DTEXOPCAPS_MODULATE2X ;
 int WINED3DTEXOPCAPS_MODULATE4X ;
 int WINED3DTEXOPCAPS_MODULATEALPHA_ADDCOLOR ;
 int WINED3DTEXOPCAPS_MODULATECOLOR_ADDALPHA ;
 int WINED3DTEXOPCAPS_MODULATEINVALPHA_ADDCOLOR ;
 int WINED3DTEXOPCAPS_MODULATEINVCOLOR_ADDALPHA ;
 int WINED3DTEXOPCAPS_MULTIPLYADD ;
 int WINED3DTEXOPCAPS_SELECTARG1 ;
 int WINED3DTEXOPCAPS_SELECTARG2 ;
 int WINED3DTEXOPCAPS_SUBTRACT ;
 int WINED3D_FRAGMENT_CAP_COLOR_KEY ;
 int WINED3D_FRAGMENT_CAP_PROJ_CONTROL ;
 int WINED3D_FRAGMENT_CAP_SRGB_WRITE ;
 size_t WINED3D_SHADER_TYPE_PIXEL ;
 int min (int ,int ) ;

__attribute__((used)) static void glsl_fragment_pipe_get_caps(const struct wined3d_gl_info *gl_info, struct fragment_caps *caps)
{
    caps->wined3d_caps = WINED3D_FRAGMENT_CAP_PROJ_CONTROL
            | WINED3D_FRAGMENT_CAP_SRGB_WRITE
            | WINED3D_FRAGMENT_CAP_COLOR_KEY;
    caps->PrimitiveMiscCaps = WINED3DPMISCCAPS_TSSARGTEMP
            | WINED3DPMISCCAPS_PERSTAGECONSTANT;
    caps->TextureOpCaps = WINED3DTEXOPCAPS_DISABLE
            | WINED3DTEXOPCAPS_SELECTARG1
            | WINED3DTEXOPCAPS_SELECTARG2
            | WINED3DTEXOPCAPS_MODULATE4X
            | WINED3DTEXOPCAPS_MODULATE2X
            | WINED3DTEXOPCAPS_MODULATE
            | WINED3DTEXOPCAPS_ADDSIGNED2X
            | WINED3DTEXOPCAPS_ADDSIGNED
            | WINED3DTEXOPCAPS_ADD
            | WINED3DTEXOPCAPS_SUBTRACT
            | WINED3DTEXOPCAPS_ADDSMOOTH
            | WINED3DTEXOPCAPS_BLENDCURRENTALPHA
            | WINED3DTEXOPCAPS_BLENDFACTORALPHA
            | WINED3DTEXOPCAPS_BLENDTEXTUREALPHA
            | WINED3DTEXOPCAPS_BLENDDIFFUSEALPHA
            | WINED3DTEXOPCAPS_BLENDTEXTUREALPHAPM
            | WINED3DTEXOPCAPS_MODULATEALPHA_ADDCOLOR
            | WINED3DTEXOPCAPS_MODULATECOLOR_ADDALPHA
            | WINED3DTEXOPCAPS_MODULATEINVCOLOR_ADDALPHA
            | WINED3DTEXOPCAPS_MODULATEINVALPHA_ADDCOLOR
            | WINED3DTEXOPCAPS_DOTPRODUCT3
            | WINED3DTEXOPCAPS_MULTIPLYADD
            | WINED3DTEXOPCAPS_LERP
            | WINED3DTEXOPCAPS_BUMPENVMAP
            | WINED3DTEXOPCAPS_BUMPENVMAPLUMINANCE;
    caps->MaxTextureBlendStages = MAX_TEXTURES;
    caps->MaxSimultaneousTextures = min(gl_info->limits.samplers[WINED3D_SHADER_TYPE_PIXEL], MAX_TEXTURES);
}
