; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_glsl_shader.c_glsl_fragment_pipe_get_caps.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_glsl_shader.c_glsl_fragment_pipe_get_caps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_gl_info = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }
%struct.fragment_caps = type { i32, i32, i32, i32, i32 }

@WINED3D_FRAGMENT_CAP_PROJ_CONTROL = common dso_local global i32 0, align 4
@WINED3D_FRAGMENT_CAP_SRGB_WRITE = common dso_local global i32 0, align 4
@WINED3D_FRAGMENT_CAP_COLOR_KEY = common dso_local global i32 0, align 4
@WINED3DPMISCCAPS_TSSARGTEMP = common dso_local global i32 0, align 4
@WINED3DPMISCCAPS_PERSTAGECONSTANT = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_DISABLE = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_SELECTARG1 = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_SELECTARG2 = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_MODULATE4X = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_MODULATE2X = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_MODULATE = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_ADDSIGNED2X = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_ADDSIGNED = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_ADD = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_SUBTRACT = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_ADDSMOOTH = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_BLENDCURRENTALPHA = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_BLENDFACTORALPHA = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_BLENDTEXTUREALPHA = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_BLENDDIFFUSEALPHA = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_BLENDTEXTUREALPHAPM = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_MODULATEALPHA_ADDCOLOR = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_MODULATECOLOR_ADDALPHA = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_MODULATEINVCOLOR_ADDALPHA = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_MODULATEINVALPHA_ADDCOLOR = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_DOTPRODUCT3 = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_MULTIPLYADD = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_LERP = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_BUMPENVMAP = common dso_local global i32 0, align 4
@WINED3DTEXOPCAPS_BUMPENVMAPLUMINANCE = common dso_local global i32 0, align 4
@MAX_TEXTURES = common dso_local global i32 0, align 4
@WINED3D_SHADER_TYPE_PIXEL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wined3d_gl_info*, %struct.fragment_caps*)* @glsl_fragment_pipe_get_caps to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @glsl_fragment_pipe_get_caps(%struct.wined3d_gl_info* %0, %struct.fragment_caps* %1) #0 {
  %3 = alloca %struct.wined3d_gl_info*, align 8
  %4 = alloca %struct.fragment_caps*, align 8
  store %struct.wined3d_gl_info* %0, %struct.wined3d_gl_info** %3, align 8
  store %struct.fragment_caps* %1, %struct.fragment_caps** %4, align 8
  %5 = load i32, i32* @WINED3D_FRAGMENT_CAP_PROJ_CONTROL, align 4
  %6 = load i32, i32* @WINED3D_FRAGMENT_CAP_SRGB_WRITE, align 4
  %7 = or i32 %5, %6
  %8 = load i32, i32* @WINED3D_FRAGMENT_CAP_COLOR_KEY, align 4
  %9 = or i32 %7, %8
  %10 = load %struct.fragment_caps*, %struct.fragment_caps** %4, align 8
  %11 = getelementptr inbounds %struct.fragment_caps, %struct.fragment_caps* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  %12 = load i32, i32* @WINED3DPMISCCAPS_TSSARGTEMP, align 4
  %13 = load i32, i32* @WINED3DPMISCCAPS_PERSTAGECONSTANT, align 4
  %14 = or i32 %12, %13
  %15 = load %struct.fragment_caps*, %struct.fragment_caps** %4, align 8
  %16 = getelementptr inbounds %struct.fragment_caps, %struct.fragment_caps* %15, i32 0, i32 1
  store i32 %14, i32* %16, align 4
  %17 = load i32, i32* @WINED3DTEXOPCAPS_DISABLE, align 4
  %18 = load i32, i32* @WINED3DTEXOPCAPS_SELECTARG1, align 4
  %19 = or i32 %17, %18
  %20 = load i32, i32* @WINED3DTEXOPCAPS_SELECTARG2, align 4
  %21 = or i32 %19, %20
  %22 = load i32, i32* @WINED3DTEXOPCAPS_MODULATE4X, align 4
  %23 = or i32 %21, %22
  %24 = load i32, i32* @WINED3DTEXOPCAPS_MODULATE2X, align 4
  %25 = or i32 %23, %24
  %26 = load i32, i32* @WINED3DTEXOPCAPS_MODULATE, align 4
  %27 = or i32 %25, %26
  %28 = load i32, i32* @WINED3DTEXOPCAPS_ADDSIGNED2X, align 4
  %29 = or i32 %27, %28
  %30 = load i32, i32* @WINED3DTEXOPCAPS_ADDSIGNED, align 4
  %31 = or i32 %29, %30
  %32 = load i32, i32* @WINED3DTEXOPCAPS_ADD, align 4
  %33 = or i32 %31, %32
  %34 = load i32, i32* @WINED3DTEXOPCAPS_SUBTRACT, align 4
  %35 = or i32 %33, %34
  %36 = load i32, i32* @WINED3DTEXOPCAPS_ADDSMOOTH, align 4
  %37 = or i32 %35, %36
  %38 = load i32, i32* @WINED3DTEXOPCAPS_BLENDCURRENTALPHA, align 4
  %39 = or i32 %37, %38
  %40 = load i32, i32* @WINED3DTEXOPCAPS_BLENDFACTORALPHA, align 4
  %41 = or i32 %39, %40
  %42 = load i32, i32* @WINED3DTEXOPCAPS_BLENDTEXTUREALPHA, align 4
  %43 = or i32 %41, %42
  %44 = load i32, i32* @WINED3DTEXOPCAPS_BLENDDIFFUSEALPHA, align 4
  %45 = or i32 %43, %44
  %46 = load i32, i32* @WINED3DTEXOPCAPS_BLENDTEXTUREALPHAPM, align 4
  %47 = or i32 %45, %46
  %48 = load i32, i32* @WINED3DTEXOPCAPS_MODULATEALPHA_ADDCOLOR, align 4
  %49 = or i32 %47, %48
  %50 = load i32, i32* @WINED3DTEXOPCAPS_MODULATECOLOR_ADDALPHA, align 4
  %51 = or i32 %49, %50
  %52 = load i32, i32* @WINED3DTEXOPCAPS_MODULATEINVCOLOR_ADDALPHA, align 4
  %53 = or i32 %51, %52
  %54 = load i32, i32* @WINED3DTEXOPCAPS_MODULATEINVALPHA_ADDCOLOR, align 4
  %55 = or i32 %53, %54
  %56 = load i32, i32* @WINED3DTEXOPCAPS_DOTPRODUCT3, align 4
  %57 = or i32 %55, %56
  %58 = load i32, i32* @WINED3DTEXOPCAPS_MULTIPLYADD, align 4
  %59 = or i32 %57, %58
  %60 = load i32, i32* @WINED3DTEXOPCAPS_LERP, align 4
  %61 = or i32 %59, %60
  %62 = load i32, i32* @WINED3DTEXOPCAPS_BUMPENVMAP, align 4
  %63 = or i32 %61, %62
  %64 = load i32, i32* @WINED3DTEXOPCAPS_BUMPENVMAPLUMINANCE, align 4
  %65 = or i32 %63, %64
  %66 = load %struct.fragment_caps*, %struct.fragment_caps** %4, align 8
  %67 = getelementptr inbounds %struct.fragment_caps, %struct.fragment_caps* %66, i32 0, i32 2
  store i32 %65, i32* %67, align 4
  %68 = load i32, i32* @MAX_TEXTURES, align 4
  %69 = load %struct.fragment_caps*, %struct.fragment_caps** %4, align 8
  %70 = getelementptr inbounds %struct.fragment_caps, %struct.fragment_caps* %69, i32 0, i32 4
  store i32 %68, i32* %70, align 4
  %71 = load %struct.wined3d_gl_info*, %struct.wined3d_gl_info** %3, align 8
  %72 = getelementptr inbounds %struct.wined3d_gl_info, %struct.wined3d_gl_info* %71, i32 0, i32 0
  %73 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %72, i32 0, i32 0
  %74 = load i32*, i32** %73, align 8
  %75 = load i64, i64* @WINED3D_SHADER_TYPE_PIXEL, align 8
  %76 = getelementptr inbounds i32, i32* %74, i64 %75
  %77 = load i32, i32* %76, align 4
  %78 = load i32, i32* @MAX_TEXTURES, align 4
  %79 = call i32 @min(i32 %77, i32 %78)
  %80 = load %struct.fragment_caps*, %struct.fragment_caps** %4, align 8
  %81 = getelementptr inbounds %struct.fragment_caps, %struct.fragment_caps* %80, i32 0, i32 3
  store i32 %79, i32* %81, align 4
  ret void
}

declare dso_local i32 @min(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
